# FennOmix.MHC

./: .bumpversion.cfg  .gitignore  1-1.embed_prot_esm2.ipynb  1-3.pickle_protein_embedings.ipynb  1-5.compare_with_netMHCpan.ipynb  2-1.plot_HLA_clustering.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  casanovo_baseline_MLP.ipynb  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: openai_code_review.py
.github/workflows/: _install_env.yml  _run_tests.yml  branch-checks.yaml  branch-checks.yml  code_review.yml
docs/: api_docs.rst  build_docs.sh  conf.py  index.md
docs/api/: fennomix_mhc.mhc_binding_model.rst  fennomix_mhc.mhc_binding_retriever.rst  fennomix_mhc.mhc_utils.rst  fennomix_mhc.pipeline_api.rst  fennomix_mhc.plotting_utils.rst  fennomix_mhc.rst  fennomix_mhc.tda_fmm.rst  modules.rst  pipeline.rst
fennet/: cli.py
fennet/mhc/: cli.py  mhc_binding_model.py  mhc_binding_retriever.py  mhc_utils.py  plotting_utils.py  settings.py
fennet/mhc/constants/: default_settings.yaml
fennet_mhc/: __init__.py  cli.py  cli_runners.py  mhc_binding_model.py  mhc_binding_retriever.py  mhc_utils.py  pipeline_api.py  plotting_utils.py  settings.py  tda_fmm.py
fennet_mhc/constants/: _const.py  default_settings.yaml  global_settings.yaml
fennomix_mhc/: cli.py  mhc_binding_model.py  mhc_binding_retriever.py  mhc_utils.py  pipeline_api.py  plotting_utils.py  tda_fmm.py
fennomix_mhc/constants/: global_settings.yaml
misc/: pip_install.sh
nbs/: 1-1.embed_prot_esm2.ipynb  1-2.train.ipynb  1-3.pickle_protein_embedings.ipynb  1-5.compare_with_netMHCpan.ipynb  2-1.predict_binding_peptides_for_alleles.ipynb  2-10.peptides_set_deconvolution.ipynb  2-2.DDA_generate_fasta.ipynb  2-3.DDA_pFind_result_statistics.ipynb  2-4.DDA_intersection_mixmhcpred_validation.ipynb  2-5.DIA_generate_speclib.ipynb  2-6.DIA_transfer_RT_model_for_predict_speclib.ipynb  2-7.DIA_diann_result_statistics.ipynb  2-8.DIA_nuORF_result_statistics.ipynb  2-9.DIA_non-canonical_result_statistics.ipynb  3-1.plot_HLA_clustering.ipynb  3-2.check_cluster_overlap.ipynb  4-1.clustered_MHC_for_structure_motif.ipynb  5-1.predict_extend_alleles_for_share_vaccine.ipynb  5-2.draw_tsne_plot_for_mapping_alleles_epitopes.ipynb  5-3.predict_extend_alleles_for_capd_epitopes.ipynb  5-4.optimize_extend_alleles_for_COSMIC_potential_epitopes.ipynb  6-1.prep_fine_tuining_data.ipynb  6-2.fine_tuning_foundation_model.ipynb
nbs/mhc/: 1-2.train.ipynb  1-3.pickle_protein_embedings.ipynb  2-1.plot_HLA_clustering.ipynb  2-3.DDA_pFind_result_statistics.ipynb  2-4.DDA_intersection_mixmhcpred_validation.ipynb  2-5.DDA_pFind_result_statistics.ipynb  2-6.DDA_intersection_mixmhcpred_validation.ipynb  2-6.DIA_transfer_RT_model_for_predict_speclib.ipynb  2-7.DIA_diann_result_statistics.ipynb  2-8.DIA_nuORF_result_statistics.ipynb  2-9.DIA_non-canonical_result_statistics.ipynb  3-1.plot_HLA_clustering.ipynb  3-1.predict_binding_peptides_for_alleles.ipynb  4-1.clustered_MHC_for_structure_motif.ipynb  5-3.predict_extend_alleles_for_capd_epitopes.ipynb  6-2.fine_tuning_foundation_model.ipynb
pdeep/: __init__.py  cli.py
pdeep/mhc/: mhc_binding_model.py  mhc_binding_retriever.py  mhc_utils.py  plotting_utils.py  tda_fmm.py
requirements/: requirement_development.txt  requirements_dev.txt  requirements_docs.txt  requirements_loose.txt
test/: test_command.sh
tests/: 0813_100k_peptides.tsv  allele_df_for_epitope.tsv  download_models.py  epitope.tsv  run_cli_tests.sh  run_unit_tests.sh  test.fasta  test_command.sh
tests/test_data/: test_peptides.fasta  test_peptides.tsv
tests/unit_tests/: test_api_pseudo.py  test_cli.py  test_metadata.py  test_pipeline_api.py  test_pretrained_models.py
