[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdeep"
version = "0.0.1"
dependencies = [
  "alphabase",
  "peptdeep",
]
requires-python = ">=3.8"
authors = [
  {name = "Wen-Feng Zeng", email = "jalew.zwf@qq.com"},
]
maintainers = [
  {name = "Wen-Feng Zeng", email = "jalew.zwf@qq.com"}
]
description = "pDeep"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["deep learning", "protein language model", "proteomics", "multi-dimensional proteomics"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["streamlit"]
cli = [
  "click",
]

[project.urls]
Homepage = "https://fennomix.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/FennOmix/pdeep.git"
"Bug Tracker" = "https://github.com/FennOmix/pdeep/issues"
Changelog = "https://github.com/FennOmix/pdeep/blob/main/CHANGELOG.md"

# [project.scripts]
# pdeep = "pdeep:main_cli"

# [project.gui-scripts]
# pdeep-gui = "pdeep:main_gui"

[project.entry-points."pdeep"]
pdeep = "pdeep:main"

[tool.setuptools]
py-modules = []