[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdeep"
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]

authors = [
  {name = "FennOmix Lab", email = "zengwenfeng@westlake.edu.cn"},
]
maintainers = [
  {name = "FennOmix Lab", email = "zengwenfeng@westlake.edu.cn"}
]
description = "pDeep"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["deep learning", "protein language model", "proteomics", "multi-dimensional proteomics"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]
# __classifiers__ = [
#     "Development Status :: 1 - Planning",
#     # "Development Status :: 2 - Pre-Alpha",
#     # "Development Status :: 3 - Alpha",
#     # "Development Status :: 4 - Beta",
#     # "Development Status :: 5 - Production/Stable",
#     # "Development Status :: 6 - Mature",
#     # "Development Status :: 7 - Inactive"
#     "Intended Audience :: Science/Research",
#     "License :: OSI Approved :: Apache Software License",
#     "Operating System :: OS Independent",
#     "Programming Language :: Python :: 3",
#     "Topic :: Scientific/Engineering :: Bio-Informatics",
# ]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements_loose.txt"]}
optional-dependencies = { stable = { file = ["requirements/requirements.txt",
] }, test = { file = [ "requirements/requirements_test.txt",
] }, dev = { file = ["requirements/requirements_dev.txt", "requirements/requirements_test.txt",
] }}
version = {attr = "pdeep.__version__"}

[project.urls]
version = "0.0.1"
Homepage = "https://fennomix.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/FennOmix/pdeep.git"
"Bug Tracker" = "https://github.com/FennOmix/pdeep/issues"
Changelog = "https://github.com/FennOmix/pdeep/blob/main/CHANGELOG.md"

# [project.scripts]
# pdeep = "pdeep:main_cli"

# [project.gui-scripts]
# pdeep-gui = "pdeep:main_gui"

[project.entry-points."pdeep"]
pdeep = "pdeep:main"

[tool.setuptools]
py-modules = []

[tool.ruff.lint]
select =  [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501",  # Line too long  (ruff wraps code, but not docstrings)
    "B028",  #  No explicit `stacklevel` keyword argument found (for warnings)
    "B006", # Do not use mutable data structures for argument defaults # TODO: fix this!
]
